#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(DeamonProcess, 1.0, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([core/main.cpp])
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(DeamonProcess,1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK

AC_OUTPUT([Makefile
           core/Makefile])
