#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(Signal, 1.0, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([core/main.cpp])
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(Signal,1.0)

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_PROG_RANLIB
# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile
           core/Makefile
           lib/Makefile])

