#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(main, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([config.h.in])
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(main,1.0)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdint.h stdlib.h string.h unistd.h])
AC_PROG_RANLIB
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_TIME
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.










PACKAGE=phonebook
dnl Source packaging numbers
AC_MSG_NOTICE([$PACKAGE_NAME-$PACKAGE_VERSION		A phonebooklibrary for telephony application.])
AC_MSG_NOTICE([licensed under the terms of the General Public License (GPL)])
#AC_CANONICAL_SYSTEM
#获得版本号
phonebook_MAJOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f1)
phonebook _MINOR_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f2)
phonebook _MICRO_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f3)
phonebook _EXTRA_VERSION=$(echo $PACKAGE_VERSION | cut -d. -f4)
phonebook_VERSION=${XXX_MAJOR_VERSION}.${XXX_MINOR_VERSION}.${XXX_MICRO_VERSION}

if test -n "$phonebook_EXTRA_VERSION" ; then
	phonebook_VERSION="${XXX_VERSION}.${XXX_EXTRA_VERSION}"
fi

AC_MSG_NOTICE([AUTOCONSAMP_VER : "$phonebook_VERSION"])

AC_SUBST(phonebook_VERSION) #传递给XXX.pc.in使用

dnl initialize pkg-config so that we can use it within if else fi statements.
PKG_PROG_PKG_CONFIG()
#配置prefix安装变量
if test "x${prefix}" = "xNONE"; then	
	package_prefix=${ac_default_prefix}
else	
	package_prefix=${prefix}
fi























AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset stpcpy strndup])

AC_CONFIG_FILES([Makefile
                 src/contacts/core/Makefile
                 src/calllog/core/Makefile
                 src/main/core/Makefile
                 src/main2/core/Makefile])
AC_OUTPUT([phonebook.pc])
